# bean-juice

./: .gitignore  README.md  main.py  pyproject.toml
coffeecrawler/: scrapy.cfg
coffeecrawler/coffeecrawler/: items.py  middlewares.py  pipelines.py  settings.py
coffeecrawler/coffeecrawler/spiders/: coffee_spider.py
notebooks/: coffee_explore.ipynb
src/: app.py  chains.py  ingestion.py  load_json.py  retriever.py
