[project]
name = "bean-juice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "accelerate>=1.13.0",
    "bitsandbytes>=0.49.2",
    "datasets>=4.8.4",
    "duckdb>=1.5.0",
    "gradio>=6.9.0",
    "langchain>=1.2.12",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-huggingface>=1.2.1",
    "langchain-ollama>=1.0.1",
    "langchain-text-splitters>=1.1.1",
    "pandas>=3.0.1",
    "peft>=0.18.1",
    "protobuf==6.33.5",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
    "scrapy>=2.14.2",
    "sentence-transformers>=5.3.0",
    "transformers>=5.3.0",
    "trl>=0.29.1",
]

[dependency-groups]
dev = [
    "huggingface-hub>=1.7.1",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "mlflow>=1.27.0",
]
